# Transcribe-and-Prompt

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  decode-decrypt-text.php  docker-compose.yml  encrypt-encode-text.ps1  initial-spec.yaml  pyproject.toml  redirect.php
app/: __init__.py  config.py  main.py  models.py  state.py
app/routes/: config.py  prompt.py  transcribe.py
app/services/: __init__.py  diarization_service.py  openrouter_service.py  whisper_service.py
app/utils/: __init__.py  audio.py  scheduler.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite-node-globals.d.ts  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: InsightList.tsx  LiveAudioControls.tsx  (+2 more)
macos/: Launch-LocalRiskInsights.command  START-HERE-MACOS.txt  Stop-LocalRiskInsights.command
portable/: requirements-windows.txt
scripts/: build_windows_bundle.py  build_windows_portable_bundle.py  dev.py
tests/: conftest.py  test_config.py  test_diarization_service.py  test_full_transcription_flow.py  test_openrouter_service.py  test_prompt_endpoint.py  test_whisper_service.py
windows/: Launch-LocalRiskInsights.bat  Launch-LocalRiskInsights.ps1  START-HERE-WINDOWS.txt  Stop-LocalRiskInsights.bat  Stop-LocalRiskInsights.ps1
windows-portable/: Launch-LocalRiskInsights-Portable.bat  Launch-LocalRiskInsights-Portable.ps1  START-HERE-PORTABLE.txt  Stop-LocalRiskInsights-Portable.bat  Stop-LocalRiskInsights-Portable.ps1
(+3 files in other folders)
